# hexapod

./: .gitignore  README.md  session.jsonl
firmware/: board.md
firmware/basic_control_testing/: BOARD_SPECIFIC_PINOUT.md  CMakeLists.txt  agents.md  basic_control_testing.c  capture_basic_leg_telemetry.py  extract_designed_arm_gait_runs.py  plot_basic_leg_assembly_pose.py  plot_basic_leg_end_effector_tracking.py  plot_basic_leg_servo_tracking.py  speed0.csv  speed1.csv  speed2.csv  speed3.csv  telemetry_plot_utils.py
firmware/blink_any/: CMakeLists.txt  blink_any.c
firmware/blink_any_copy/: .gitignore  .nvim.lua  Makefile  README.md  blink_any.c  justfile
firmware/blink_any_copy/.nvim/: dap-rp2040.lua
firmware/common/: devlink_serial.c  devlink_serial.cmake  devlink_serial.h  hexapod_serial.c  hexapod_serial.h  leg_pins.h  pio_uart_rx.c  pio_uart_rx.h  uart_rx.pio
firmware/control_testing/: CMakeLists.txt  adc_input.c  adc_input.h  control_testing.c  motor_pwm.c  motor_pwm.h  position_hold.c  position_hold.h  servo.c  servo.h
firmware/control_testing/firmware/recordings/: devlink-ttyACM0-20260422-135801.jsonl  devlink-ttyACM0-20260430-195232.jsonl  devlink-ttyACM0-20260430-201515.jsonl  devlink-ttyACM0-20260430-201949.jsonl  devlink-ttyACM0-20260430-202709.jsonl  devlink-ttyACM0-20260430-203203.jsonl  devlink-ttyACM0-20260430-203322.jsonl  speed0.jsonl  (+9 more)
firmware/control_testing/recordings/: devlink-ttyACM0-20260329-131357.jsonl  devlink-ttyACM0-20260329-133307.jsonl  devlink-ttyACM0-20260331-210420.jsonl  devlink-ttyACM0-20260406-215143.jsonl
firmware/debug-2/: CMakeLists.txt  debug-2.c  debug_app.c  debug_app.h
firmware/leg/: CMakeLists.txt  PIO_UART_RX.md  adc_pot.c  adc_pot.h  leg.c  motor_pwm.c  motor_pwm.h  pio_uart_rx.c  pio_uart_rx.h  telemetry.c  telemetry.h
firmware/recordings/: devlink-ttyACM0-20260329-123938.jsonl  devlink-ttyACM0-20260329-123954.jsonl
firmware/status_led_demo/: CMakeLists.txt  status_led_demo.c
hardware/CAD/: Callibration.20260330-161101.FCBak  Callibration.FCStd  LegAssembly.20260310-141936.FCBak  LegAssembly.20260329-182542.FCBak  LegAssembly.20260407-150038.FCBak  LegAssembly.20260408-185632.FCBak  LegAssembly.20260427-192830.FCBak  LegAssembly.FCStd  Parts.20260310-134254.FCBak  Parts.20260330-152827.FCBak  Parts.20260408-161619.FCBak  Parts.20260408-194944.FCBak  Parts.20260421-145132.FCBak  Parts.FCStd
hardware/KiCad 9 ESP32 Demo/: KiCad 9 ESP32 Demo.kicad_prl  KiCad 9 ESP32 Demo.kicad_pro  KiCad 9 ESP32 Demo.kicad_sch  esp32-c3-02.kicad_sch
hardware/RP2040_minimal_r2/: RP2040_minimal_r2.kicad_prl  RP2040_minimal_r2.kicad_pro
hardware/leg-director/: leg-director.kicad_prl  leg-director.kicad_pro  leg-director.kicad_sch
hardware/rc-transmitter/: rc-transmitter.kicad_prl  rc-transmitter.kicad_sch
hardware/smart_servo/: bom.xlsx  fp-info-cache  fp-lib-table  smart_servo.kicad_pcb  smart_servo.kicad_prl  smart_servo.kicad_pro  smart_servo.kicad_sch  smart_servo.step  sym-lib-table
hardware/smart_servo/bom/: ibom.html
hardware/smart_servo/gerber/: smart_servo-B_Cu.gbr  smart_servo-B_Mask.gbr  smart_servo-B_Paste.gbr  smart_servo-B_Silkscreen.gbr  smart_servo-Edge_Cuts.gbr  smart_servo-F_Cu.gbr  smart_servo-F_Mask.gbr  smart_servo-F_Paste.gbr  smart_servo-F_Silkscreen.gbr  smart_servo-NPTH.drl  smart_servo-PTH.drl  smart_servo-job.gbrjob
hardware/smart_servo/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
hardware/smart_servo_v2/: bom_v2.xlsx  fabrication-toolkit-options.json  first_order.csv  fp-info-cache  smart_servo_v2.kicad_pcb  smart_servo_v2.kicad_prl  smart_servo_v2.kicad_pro  smart_servo_v2.kicad_sch  smart_servo_v2.step  smart_servo_v2_log_missing3Dmodels.txt  smart_servo_v2_missing3Dmodels.txt  sym-lib-table  ~smart_servo_v2.kicad_sch.lck
hardware/smart_servo_v2/bom/: ibom.html
hardware/smart_servo_v2/production/: netlist.ipc  smart_servo_v2_bom.csv  smart_servo_v2_designators.csv  smart_servo_v2_positions.csv
hardware/smart_servo_v2/rc-transmitter/: rc-transmitter.kicad_pro
software/bleep/: .gitmodules  CMakeLists.txt  README.md  imgui.ini
software/bleep/bleep/: CMakeLists.txt
software/bleep/bleep/include/: ArcBall.h  ArcBallCamera.h  body.h  controller.h  cube.h  cubeDrawable.h  graphicsBody.h  graphicsJoint.h  graphicsLeg.h  imgui.ini  joint.h  leg.h  meshDrawable.h  walkingGait.h
software/bleep/bleep/include/MacSerialPort/SerialPort/: SerialPort.cpp  SerialPort.hpp
software/bleep/bleep/models/: baseJoint.stl  body.stl  secondJoint.stl  thirdJoint.stl
software/bleep/bleep/models/3mf/: baseJoint.3mf  secondJoint.3mf  thirdJoint.3mf
software/bleep/bleep/src/: ArcBall.cpp  CMakeLists.txt  main.cpp
software/simulation/: .gitignore  CMakeLists.txt  README.md
software/simulation/cmake/: ThirdPartyVersions.cmake
software/simulation/docs/: architecture.md
software/simulation/docs/adr/: 0001-magnum-editor-stack.md  0002-vendored-pinned-dependencies.md  0003-editor-shell-first.md
software/simulation/src/: CMakeLists.txt  main.cpp
software/simulation/src/editor/: ArcBall.cpp  ArcBall.h  EditorApplication.cpp  EditorApplication.h  EditorTypes.h  MathUtils.h  Persistence.cpp  Persistence.h  SceneModel.cpp  SceneModel.h  ViewportRenderer.cpp  ViewportRenderer.h
software/simulation/tests/: CMakeLists.txt  SceneModelTest.cpp
tools/devlink_dashboard/: README.md  pyproject.toml
tools/devlink_dashboard/devlink_dashboard/: __init__.py  cli.py  messages.py  model.py  session.py  transport.py
tools/devlink_dashboard/devlink_dashboard/gui/: __init__.py  app.py  controller.py  main_window.py  plot_workspace.py  runtime.py  workspace.py
tools/devlink_dashboard/tests/: test_cli.py  test_gui_app.py  test_gui_runtime.py  test_gui_smoke.py  test_gui_workspace.py  test_messages.py  test_model.py  test_session.py  test_transport.py
tools/hexapod_dashboard/: README.md  pyproject.toml
tools/hexapod_dashboard/hexapod_dashboard/: __init__.py  bus.py  cli.py  messages.py  transport.py
tools/hexapod_dashboard/tests/: test_messages.py  test_model.py  test_session.py
(+42 files in other folders)
