[project]
name = "devlink-dashboard"
version = "0.1.0"
description = "Host-side transport and protocol tooling for devlink"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
serial = ["pyserial>=3.5"]

[project.scripts]
devlink-dashboard = "devlink_dashboard.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
