[project]
name = "hexapod-dashboard"
version = "0.1.0"
description = "Host-side transport and protocol tooling for hexapod.serial"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
serial = ["pyserial>=3.5"]

[project.scripts]
hexapod-dashboard = "hexapod_dashboard.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
